en/4.13/_sources/network-policies.rst.txt
.. meta::
    :description: Netris Network Policies & Protocol Configuration

.. _vpc_def:

======================
Netris VPC
======================

The Netris VPC offers you the ability to operate your resources within a logically segregated virtual network. You can create, edit, and remove VPCs as needed. The VPC acts as a VRF in traditional networking, providing the flexibility to employ overlapping IP ranges across various VPCs while maintaining secure management and operation of resources.

Netris Controller ships with one VPC (VPC-1) pre-provisioned; it cannot be deleted. VPC-1 carries two distinct roles at once — it is both the **System VPC** (the trust boundary and anchor for infrastructure objects such as switch loopbacks and SoftGate-terminated BGP/NAT/load-balancer traffic) and the **Default VPC** (the VPC the Controller substitutes for the required VPC field when a value isn't explicitly given, and the one pre-populated in "Add new" dialogs in the web UI). These are different concepts that happen to be the same VPC by default. See the Netris VPC page for the full explanation and for the list of objects that belong to a VPC, before creating additional VPCs.

The following diagram shows a VPC concept in the Netris Controller. 

.. image:: images/vpc_diagram.png
   :align: center
   :alt: VPC diagram

VPC is the highest entity in the hierarchy and it spreads over all Sites. 
Take a look at the VPC features and services.

VPC can be created in the Network → VPC section.

Adding new VPC
--------------

1. Navigate to Network → VPC in the web UI.
2. Click Add button.

.. image:: images/vpc_add.png
    :align: center

.. _ipam_def_vpc:

======================
IP Address Management
======================

Netris IPAM allows users to document their IP addresses and track pool usage. It is designed to have a tree-like view to provide opportunity to perform any kind of subnetting.

Purpose: Users define specific roles (purpose) for each subnet/address and only after that are allowed to use those subnets in services like V-Net, NAT, etc…

Each VPC has its own IPAM table.


Allocations and Subnets
-----------------------

There are 2 types of IPAM objects:

* **Allocations** are IP ranges allocated to an organization via RIR/LIR or private IP ranges that are going to be used by the network.
* **Subnets** are prefixes which are going to be used in services. Subnets are always children of allocations. Allocations do not have parent subnets.

IPAM Tree View
--------------------------


.. image:: images/ipam_tree_new.png
   :align: center
   :alt: IPAM Tree View
   :class: with-shadow

.. raw:: html

   <br>

Add an Allocation
-----------------

#. Navigate to Network → IPAM
#. Click the **Add** button
#. Select **Allocation** from the bottom select box
#. Fill in the rest of the fields based on the requirements listed below
#. Click the **Add** button


.. list-table:: Allocation Fields
   :widths: 25 50
   :header-rows: 0

   * - Prefix
     - Unique prefix for allocation, must not overlap with other allocations.
   * - Name
     - Unique name for current allocation.
   * - VPC
     - Select a VPC to which the allocation belongs.
   * - Tenant
     - Owner of the allocation.

.. image:: images/ipam_allocation.png
   :align: center
   :class: with-shadow
   :alt: Add a New IP Allocation

.. raw:: html

   <br>

Add a Subnet
------------

**Create subnets for devices**

You will require two subnets for your devices: one for loopback IP addresses and another for the management network. Note that device subnets must reside in the System VPC.

#. Navigate to Network → IPAM
#. Click the **Add** button
#. Select **Subnet** from the bottom select box
#. Fill in the rest of the fields based on the requirements listed below
#. Click the **Add** button

.. image:: images/ipam_mgmt_subnet.png
  :align: center

.. image:: images/ipam_loopback_subnet.png
  :align: center

**Create subnets for V-Nets**

Create at least one subnet with the Common purpose to use it for a new V-Net. IP addresses from this subnet will be assigned to your servers.

.. image:: images/ipam_common_subnet.png
  :align: center


**Create subnets for Load-balancing service**

.. warning::

   Subnet intended for Load-balancing should be assigned to the system VPC.

If you plan to use load-balancing services, you should first define subnet(s) from which IP addresses will be assigned for Virtual IP (frontend).

.. image:: images/ipam_l4lb_subnet.png
  :align: center


.. _ipam_nat_subnet:

**Create subnets for NAT service**

If you plan to perform network address translation (NAT), you must first create subnets for this purpose.

.. warning::

   Subnet intended for NAT should be assigned to the system VPC.

.. image:: images/ipam_nat_subnet.png
  :align: center

.. list-table:: Subnet fields
   :widths: 25 50
   :header-rows: 0

   * - **Prefix**
     - Unique prefix for subnet, must be included in one of allocations.
   * - **Name**
     - Unique name for current subnet.
   * - **VPC**
     - Select a VPC to which the subnet belongs.
   * - **Tenant**
     - Owner of the subnet.
   * - **Purpose**
     - This field describes for what kind of services the current subnet can be used. It can have the following values:

        - *common* - ordinary subnet, can be used in V-Nets.
        - *loopback* - hosts of this subnet can be used only as loopback IP addresses for Netris hardware (switches and/or softgates).
        - *management* - subnet which specifies the Out-of-Band management IP addresses for Netris hardware (switches and softgates).
        - *load-balancer* - hosts of this subnet are used in L4LB services only. Useful for deploying on-prem kubernetes with cloud-like experience.
        - *nat* - hosts of this subnet or subnet itself can be used to define NAT services.
        - *inactive* - can't be used in any services, useful for reserving/documenting prefixes for future use.

.. _bgp_def:

======================
BGP
======================

Basic BGP
---------

BGP neighbors can be declared in the Network → E-BGP section. Netris software will automatically generate and program the network configuration to meet the requirements.

**Adding BGP Peers**

#. Navigate to Network → E-BGP in the web UI.
#. Click the Add button.
#. Fill in the fields as described in the table below.
#. Click the Add button.


.. csv-table:: BGP Peer Fields
    :file: tables/bgp-basic.csv
    :widths: 25, 75, 25
    :header-rows: 0

Example: Declare a basic BGP neighbor.

.. image:: images/create_bgp.png
    :align: center

If everything is correct, State, port and BGP will get green status.

.. image:: images/bgp_status.png
    :align: center

Advanced BGP
------------

BGP neighbor declaration can optionally include advanced BGP attributes and BGP route-maps for fine-tuning of BGP policies.

Click Advanced to expand the BGP neighbor add/edit window.


.. csv-table:: BGP Peer Fields - Advanced
    :file: tables/bgp-advanced.csv
    :widths: 25, 75, 25
    :header-rows: 0


BGP Objects
-----------
| Under Network → E-BGP objects, you can define various BGP objects referenced from a route-map to declare a dynamic BGP policy.
| Supported objects include:

* IPv4 Prefix
* IPv6 Prefix
* AS-PATH
* Community
* Extended Community
* Large Community

IPv4 Prefix
^^^^^^^^^^^
| The rules are defined one per line.
| Each line in IPv4 prefix list field consists of three parts:

* Action - Possible values are: permit or deny (mandatory).
* IP Prefix - Any valid IPv4 prefix (mandatory).
* Length - Possible values are: le <len>, ge <len> or ge <len> le <len>.

Example: Creating an IPv4 Prefix list.

.. image:: images/ipv4_prefix.png
    :align: center

IPv6 Prefix
^^^^^^^^^^^
| Rules defined one per line.
| Each line in IPv6 prefix list field consists of three parts:

* Action - Possible values are: permit or deny (mandatory).
* IP Prefix - Any valid IPv6 prefix (mandatory).
* Keyword - Possible values are: le <len>, ge <len> or ge <len> le <len>.

Example: Creating an IPv6 Prefix list.

.. image:: images/ipv6_prefix.png
    :align: center

Community
^^^^^^^^^
| Community field has two parts:

* **Action** - Possible values: permit or deny (mandatory).
* **Community string** - Allowed format: ``< permit/deny> LINE``. LINE is AA:NN Community number in AA:NN format (where AA and NN are (0-65535)) or ``local-AS``, ``no-advertise``, ``no-export``, ``internet`` or ``additive``.

Example: Creating community.

.. image:: images/community.png
    :align: center



BGP route-maps
--------------
| Under the Network → E-BGP Route-maps section, you can define route-map policies, which can be associated with the BGP neighbors inbound or outbound.

| Description of route-map fields:

* **Sequence Number** - Automatically assigned a sequence number. Drag and move sequences to organize the order.
* **Description** - Free description.
* **Policy** - Permit or deny the routes which match below all match clauses within the current sequence.
* **Match** - Rules for route matching.

  * **Type** - Type of the object to match: AS-Path, Community, Extended Community, Large Community, IPv4 prefix-list, IPv4 next-hop, Route Source, IPv6 prefix-list. IPv6 next-hop, local-preference, MED, Origin, Route Tag.
  * **Object** - Select an object from the list.

* **Action** - Action when all match clauses are met.

  * **Action type** - Define whether to manipulate a particular BGP attribute or go to another sequence.
  * **Attribute** - The attribute to be manipulated.
  * **Value** - New attribute value.

Example: route-map

.. image:: images/route-map.png
    :align: center
    :class: with-shadow


eBGP Importing Non-Default Routes into a VPC
-----------------------------------------------

In multi-uplink deployments SoftGate Hyperscale (SG-HS) nodes can be eBGP peered with different upstream networks.

By default, Netris SoftGates only redistribute the default route into tenant VPCs, regardless of what other prefixes they receive from upstream peers. This ensures a consistent routing table across all SoftGates, but can lead to suboptimal routing, where traffic from the VPC is always routed to the SoftGate receiving the default, even if another SoftGate has a better path via specific prefixes.

Starting with version 4.5.4, Netris introduces a mechanism to selectively import non-default routes into VPCs by tagging them with a special **BGP community: 0:7**. Routes marked with this community will be redistributed into tenant VPCs alongside the default.

.. warning::
  Importing additional prefixes into VPCs increases the size of the routing table on SoftGates and switches. Ensure that your hardware can handle the increased load, especially if you plan to import many prefixes.

How to Import Non-Default Prefixes
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

You have two options for tagging the desired prefixes with the required 0:7 community.

**Option 1**: Tag Inbound in Netris (on SoftGate HS)

If you manage the eBGP peer configuration using the Netris Controller, you can mark specific routes for redistribution into tenant VPCs by tagging them with the special BGP community 0:7.

1.	Create a Prefix List under Network → E-BGP Objects

.. tip::
  Do not include 0.0.0.0/0 — it is automatically imported

.. image:: images/prefix-list-imported-prefixes.png
    :align: center
    :alt: prefix list
    :class: with-shadow

.. raw:: html

    <br/>

2.	Create a Route Map under Network → E-BGP Route-Maps

Add a new route-map that

  -	Matches the prefix list created in Step 1
  -	Sets the BGP community to ``0:7``

.. image:: images/ebgp-route-map-set-07.png
    :align: center
    :alt: route-map
    :class: with-shadow

.. raw:: html

    <br/>

3.	Attach the Route Map to the eBGP Peer under Network → E-BGP

Edit the relevant eBGP neighbor and under Advanced Settings, set the inbound route-map to the one created in Step 2

.. image:: images/ebgp-advanced-inbound-route-map.png
    :align: center
    :alt: inbound route-map
    :class: with-shadow

.. raw:: html

    <br/>

Once applied, any matching prefixes received from this eBGP peer will be tagged with community 0:7, making them eligible for redistribution into tenant VPCs by the SoftGate.

.. tip::
  You can verify imported routes in the Network → Looking Glass section of the Controller UI.

.. warning::
  When configuring an inbound route-map on an eBGP peer, an outbound route-map must also be set. If no outbound route-map is needed, create a dummy one that permits all routes without modification and attach it to the outbound direction.

**Option 2**: Tag Outbound from External BGP Peer

Alternatively, the external BGP speaker can set the 0:7 community on outbound updates before advertising routes to the SoftGate. This option does not require any configuration in Netris, as long as the incoming route already carries the community.

This is useful when the upstream router is under the customer's control and managing policy from that side is preferred.

======================
Static Routing
======================
Located under Network → Routes is a method for describing static routing policies that Netris will dynamically inject on switches and/or SoftGate where appropriate. We recommend using the Routes only if BGP is not supported by the remote end.


Typical use cases for static routing:

* To connect the switch fabric to an ISP or upstream router in a situation where BGP and dual-homing are not supported.
* Temporary interconnection with the old network for a migration.
* Routing a subnet behind a VM hypervisor machine for an internal VM network.
* Specifically routing traffic destined to a particular prefix through an Out-of-Band management network.

Add new static route fields description:

* **Prefix** - Route destination to match.
* **Next-Hop** - Traffic destined to the Prefix will be routed towards the Next-Hop. Note that static routes will be injected only on units that have the Next-Hop as a connected network.
* **Description** - Free description.
* **VPC** - Select a VPC to which the static route belongs.
* **Site** - Site where Route belongs.
* **State** - Administrative (enable/disable) state of the Route.
* **Apply to** -  Limit the scope to particular units. It's typically used for Null routes.


Example: Default route pointing to a Next-Hop that belongs to one of V-Nets.

.. image:: images/static_route_empty.png
    :align: center

Example: Adding a back route to 10.254.0.0/16 through an Out-of-Band management network.

.. image:: images/static_route2_empty.png
    :align: center

Screenshot shows that the back route is actually applied on Softgate1 and Softgate2 .

.. image:: images/static_route3.png
    :align: center


.. _nat_def:

======================
NAT
======================

If you utilize private address space for your hosts, you may need a NAT service to enable internet access. Netris SoftGate nodes are required for NAT (Network Address Translation) functionality to work and support SNAT, DNAT and Masquerade features.

Enabling NAT
------------
To enable NAT for a given site, you first need to :ref:`create a subnet with NAT purpose <ipam_nat_subnet>` in the IPAM section. The NAT IP addresses can be used for SNAT or DNAT as a global IP address (the public IP visible on the Internet). NAT IP pools are IP address ranges that SNAT can use as a rolling global IP (for a larger scale, similar to carrier-grade SNAT). SNAT is always overloading the ports, so many local hosts can share one or just a few public IP addresses. You can add as many NAT IP addresses and NAT pools as you need.
Adding an IP Subnet under Network → IPAM.

Defining NAT rules
------------------
NAT rules are defined under Network → NAT.

Example: SNAT all hosts on 10.0.1.0/24subnet to the Internet using 192.0.2.128as a global IP.

.. image:: images/snat_add.png
    :align: center

Example: Port forwarding. DNAT the traffic destined to 192.0.2.130:8080 to be forwarded to the host 10.0.1.100 on port tcp/80.

.. image:: images/dnat_add.png
    :align: center


.. list-table:: NAT Rule Fields
  :widths: 25 75
  :header-rows: 1

  * - Name
    - Unique name.
  * - **State**
    - State of rule (enabled or disabled).
  * - **Site**
    - Site to apply the rule.
  * - **Action**
    - *SNAT* - Replace the source IP address with specified NAT IP along with port overloading.
      *DNAT* - Replace the destination IP address and/or destination port with specified NAT IP.
      *ACCEPT* - Silently forward, typically used to add an exclusion to broader SNAT or DNAT rule.
      *MASQUERADE* - Replace the source IP address with the IP address of the exit interface.
  * - **Protocol**
    - *All* - Match any IP protocol.
      *TCP* - Match TCP traffic and ports.
      *UDP* - Match UDP traffic and ports.
      *ICMP* - Match ICMP traffic.
  * - **Source**
    - *Address* - Source IP address to match.
      *Port* - Source ports range to match with this value (TCP/UDP).
  * - **Destination**
    - *Address* - Destination IP address to match. In the case of DNAT it should be one of the predefined NAT IP addresses.
      *Port* - For DNAT only, to match a single destination port.
      *Ports* - For SNAT/ACCEPT only. Destination ports range  to match with this value (TCP/UDP).
  * - **DNAT to IP**
    - The global IP address for SNAT to be visible on the Public Internet. The internal IP address for DNAT to replace the original destination address with.
  * - **DNAT to Port**
    - The Port to which destination Port of the packet should be NAT'd.
  * - **Status**
    - Administrative state (enable/disable).
  * - **Comment**
    - Free optional comment.


======================
Looking Glass
======================

The Looking Glass Is a GUI-based tool for looking up routing information from a switch or SoftGate perspective. You can access the Looking Glass either from Topology, individually for every device (right click on device → details → Looking Glass), or by navigating to Network → Looking Glass then selecting the device from the top-left dropdown menu.

Looking Glass controls described for IPv4/IPv6 protocol families.

* **VPC** - select a VPC.
* **BGP Summary** - Shows the summary of BGP adjacencies with neighbors, interface names, prefixes received. You can click on the neighbor name then query for the list of advertised/received prefixes.
* **BGP Route** - Lookup the BGP table (RIB) for the given address.
* **Route** - Lookup switch routing table for the given address.
* **Traceroute** - Conduct a traceroute from the selected device towards the given destination, optionally allowing to determine the source IP address.
* **Ping** - Execute a ping on the selected device towards the given destination, optionally allowing to select the source IP address.

Example: listing BGP neighbors of a switch and number of received prefixes for the Underlay VPC.

.. image:: images/lg_summary.png
    :align: center

Example: BGP Route - looking up V-Net subnet from switch11 perspective. Switch11 is load balancing between four available paths.

.. image:: images/lg_bgp_route.png
    :align: center

Example: Ping.

.. image:: images/lg_ping.png
    :align: center

| Looking Glass controls described for the EVPN family.

* **VPC** - select a VPC.
* **BGP Summary** - Show brief summary of BGP adjacencies with neighbors, interface names, and EVPN prefixes received.
* **VNI** - List VNIs learned.
* **BGP EVPN** - List detailed EVPN routing information optionally for the given route distinguisher.
* **MAC table** - List MAC address table for the given VNI.

Example: Listing MAC addresses on VNI 50.

.. image:: images/lg_mac.png
    :align: center

Example: EVPN routing information listing for a specified route distinguisher.

.. image:: images/lg_rd.png
    :align: center

======================
VPC Peering
======================

VPC peering allows routing between two VPCs. It is typically used to connect a tenant VPC to a "shared" VPC where the shared services (like storage access, DNS, etc.) are located.

Consider the following scenario.

Customer VPC A and Customer VPC B accessing common services in a "Shared" VPC via VPC peering. 

Customer A and Customer B cannot access each other's VPCs

Customer A VPC will have routes of the "Shared" VPC, it will NOT have routes of Customer B VPC.
Customer B VPC will have routes of the "Shared" VPC, it will NOT have routes of Customer A VPC.

The "Shared" VPC will have routes of both A and B
Because A does not have routes of B and vice versa they cannot reach each.

Network Administrators are free to define prefix lists of VPC peering, if VPC A is configured to accept routes of VPC B from the "Shared" VPC, then Customer A can reach Customer B,but if peering is created without defining prefix list (letting netris auto-populate).

Additional details are coming soon...